--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jswork/vue-envs",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Vue cli env manager.",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -54,5 +54,14 @@
   },
   "dependencies": {
     "@jswork/env-manager": "^1.0.9"
-  }
+  },
+  "keywords": [
+    "cli",
+    "env",
+    "env-cmd",
+    "uni",
+    "uniapp",
+    "uniapp2",
+    "vue"
+  ]
 }
