feat: init taro kits

--- a/.npmignore
+++ b/.npmignore
@@ -6,15 +6,22 @@ test
 __tests__
 src
 build
+docs
 gulpfile.js
 
 .editorconfig
 .prettierrc
-.prettierignore
-.release-it.json
-typedoc.js
-tsconfig.json
+Gemfile
 jest.config.js
-babel.config.js
-yarn-error.log
-yarn.lock
+jest.setup.js
+LICENSE.txt
+Rakefile
+express.js
+.babelrc
+.vscode
+.release-it.json
+
+
+# vscode localhistory
+.history
+.release-it.json
