--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,10 @@
 {
-  "singleQuote": true,
+  "trailingComma": "none",
+  "arrowParens": "always",
   "printWidth": 100,
+  "bracketSpacing": true,
+  "jsxBracketSameLine": true,
   "tabWidth": 2,
   "semi": true,
-  "jsxBracketSameLine": true,
-  "trailingComma": "es5"
+  "singleQuote": true
 }
