--- a/package.json
+++ b/package.json
@@ -1,67 +1,47 @@
 {
-  "name": "@jswork/vue-envs",
-  "version": "1.0.1",
-  "description": "Vue cli env manager.",
-  "main": "dist/index.js",
-  "module": "dist/index.esm.js",
-  "typings": "dist/index.d.ts",
+  "name": "@jswork/next-tarovue-kits",
+  "version": "1.0.0",
+  "description": "Taro vue kits based on next.",
+  "homepage": "https://js.work",
+  "author": {
+    "name": "afei",
+    "email": "1290657123@qq.com"
+  },
   "scripts": {
     "build": "gulp",
     "test": "jest",
+    "start": "node ./express.js",
     "release": "release-it"
   },
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.21.3",
     "@babel/preset-env": "^7.20.2",
-    "@babel/preset-typescript": "^7.21.0",
     "@jswork/gulp-pkg-header": "^1.0.8",
-    "@jswork/gulp-registry": "^1.0.21",
-    "@jswork/next": "^1.1.5",
-    "@types/jest": "^29.5.0",
-    "@types/node": "^18.15.5",
-    "babel-jest": "^29.5.0",
+    "@jswork/gulp-registry": "^1.0.22",
+    "@jswork/next": "^1.1.8",
     "del": "^6.0.0",
-    "esbuild": "^0.17.12",
-    "esbuild-node-externals": "^1.6.0",
-    "esbuild-plugin-clean": "^1.0.1",
-    "esbuild-plugin-replace": "^1.3.0",
     "gulp": "^4.0.2",
-    "gulp-esbuild": "^0.11.1",
+    "gulp-babel": "^8.0.0",
+    "gulp-prettier": "^4.0.0",
     "gulp-rename": "^2.0.0",
-    "gulp-typescript": "^6.0.0-alpha.1",
+    "gulp-replace": "^1.1.4",
+    "gulp-uglify": "^3.0.2",
     "jest": "^29.5.0",
-    "typescript": "^4.9.5"
+    "jest-location-mock": "^1.0.9",
+    "uglify-save-license": "^0.4.1"
+  },
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env"
+      ]
+    ]
   },
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
-  },
-  "boilerplate": "generator-typescript",
-  "homepage": "https://js.work",
-  "babel": {
-    "presets": [
-      [
-        "@babel/preset-env",
-        {
-          "targets": {
-            "node": "current"
-          }
-        }
-      ],
-      "@babel/preset-typescript"
-    ]
-  },
-  "dependencies": {
-    "@jswork/env-manager": "^1.0.9"
-  },
-  "keywords": [
-    "cli",
-    "env",
-    "env-cmd",
-    "uni",
-    "uniapp",
-    "uniapp2",
-    "vue"
-  ]
+  }
 }
