--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jswork/next-tarovue-kits",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Taro vue kits based on next.",
   "homepage": "https://js.work",
   "author": {
@@ -43,5 +43,12 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
-  }
+  },
+  "keywords": [
+    "cli",
+    "env",
+    "env-cmd",
+    "vue",
+    "taro"
+  ]
 }
