--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@babel/core": "^7.21.3",
     "@babel/preset-env": "^7.20.2",
     "@jswork/gulp-pkg-header": "^1.0.8",
-    "@jswork/gulp-registry": "^1.0.22",
-    "@jswork/next": "^1.1.8",
+    "@jswork/gulp-registry": "^1.0.45",
+    "@jswork/next": "^1.2.2",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
@@ -32,6 +32,35 @@
     "jest": "^29.5.0",
     "jest-location-mock": "^1.0.9",
     "uglify-save-license": "^0.4.1"
+  },
+  "dependencies": {
+    "@jswork/event-mitt": "^1.0.10",
+    "@jswork/next-camelize": "^1.0.3",
+    "@jswork/next-capitalize": "^1.0.2",
+    "@jswork/next-classify": "^1.0.5",
+    "@jswork/next-compact-object": "^1.0.5",
+    "@jswork/next-date": "^1.0.19",
+    "@jswork/next-deep-assign": "^1.0.4",
+    "@jswork/next-deep-clone": "^1.0.3",
+    "@jswork/next-deep-each": "^1.0.4",
+    "@jswork/next-deep-equal": "^1.0.4",
+    "@jswork/next-empty": "^1.0.2",
+    "@jswork/next-get2get": "^1.0.8",
+    "@jswork/next-global": "^1.0.3",
+    "@jswork/next-group-by": "^1.0.2",
+    "@jswork/next-is-empty-object": "^1.0.4",
+    "@jswork/next-is-plain-object": "^1.0.4",
+    "@jswork/next-json": "^1.0.6",
+    "@jswork/next-kebab-case": "^1.0.4",
+    "@jswork/next-key-map": "^1.0.11",
+    "@jswork/next-memo": "^1.0.1",
+    "@jswork/next-param": "^1.0.12",
+    "@jswork/next-qs": "^1.0.9",
+    "@jswork/next-sets": "^1.0.5",
+    "@jswork/next-sleep": "^1.0.1",
+    "@jswork/next-try-set": "^1.0.1",
+    "@jswork/next-weapp-storage": "^1.0.7",
+    "@jswork/pipe": "^1.0.4"
   },
   "babel": {
     "presets": [
